# rent_cars_microservices

./: .gitignore
.github/workflows/: car_service.yaml  common.yaml  geo_service.yaml  order_service.yaml  websocket_service.yaml
auth_service/: .flake8  Makefile  docker-compose.yaml  pyproject.toml
auth_service/app/: __init__.py  config.py  custom_exceptions.py  db.py  dependency.py  init_db.py
auth_service/app/auth/: auth_service.py  router.py  schemas.py
auth_service/app/dao/: users.py
auth_service/app/users/: router.py  schemas.py
auth_service/tests/: conftest.py  entity_creators.py  factories.py  test_auth.py  test_users.py
cars_service/: .flake8  alembic.ini  docker-compose.yaml  env.example  pyproject.toml
cars_service/app/: __init__.py  config.py  custom_exceptions.py  custom_metrics.py  db.py  main.py  models.py  rabbit_connection.py
cars_service/app/cars/: router.py  schemas.py
cars_service/app/common/: dependency.py
cars_service/app/dao/: car.py  car_filter.py  reviews.py
cars_service/app/reviews/: router.py  schemas.py
cars_service/app/trip/: router.py  schemas.py  tasks.py
cars_service/migrations/: env.py
cars_service/migrations/versions/: 02acfe38afe4_create_models.py  a5ba43ea6681_create_models.py
cars_service/tests/: conftest.py  entity_creators.py  test_cars.py  test_reviews.py  test_trip.py
geo_service/: Makefile  docker-compose.yaml  pyproject.toml
geo_service/app/: __init__.py  config.py  redis_client.py
geo_service/app/car_stations/: router.py  schemas.py
geo_service/app/service/: car_station.py
geo_service/tests/: conftest.py  test_car_stations.py
order_service/: Makefile  docker-compose.yaml  pyproject.toml
order_service/app/: __init__.py  config.py  custom_exceptions.py  custom_metrics.py  db.py  dependency.py  models.py
order_service/app/common/: send_resquest.py
order_service/app/dao/: car.py  order.py
order_service/app/orders/: router.py  schemas.py
order_service/app/users/: schemas.py
order_service/tests/: conftest.py  factories.py  test_orders.py
service_metrics/: docker-compose.yaml  pyproject.toml
service_metrics/prometheus_data/: prometheus.yml
websocket_service/: pyproject.toml
websocket_service/app/: config.py  rebbit_connection.py
websocket_service/app/car_messages/: consumer.py
