[tool.poetry]
name = "geo-service"
version = "0.1.0"
description = ""
authors = ["Illia Troshchynskyi <itroshchinskiy@rambler.ua>"]
readme = "README.md"
packages = [{include = "geo_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.1"}
polyfactory = "2.7.2"
pytest-httpx = "^0.23.1"
redis = "^5.0.0"
fakeredis = "^2.18.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-print = "^5.0.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-httpx = "^0.23.1"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
